src/main/d96/parser/.antlr/D96Parser.py
# Generated from d:\Users\Smithienious\Desktop\trash-ppl\src\main\d96\parser\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Program'", "<INVALID>", "'Class'", "'Self'", 
                     "'Val'", "'Var'", "'If'", "'Elseif'", "'Else'", "'Break'", 
                     "'Continue'", "'Return'", "'Foreach'", "'In'", "'True'", 
                     "'False'", "'Null'", "'String'", "'Int'", "'Float'", 
                     "'Boolean'", "'Array'", "'Constructor'", "'Destructor'", 
                     "'New'", "'By'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'.'", "'..'", "','", "';'", 
                     "':'", "'::'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "'!'", "'&&'", "'||'", "'=='", "'!='", "'='", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'>'", "'>='", "'<'", "'<='", 
                     "'+.'", "'==.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "MAIN", "CLASS", "SELF", 
                      "VAL", "VAR", "IF", "ELSEIF", "ELSE", "BREAK", "CONTINUE", 
                      "RETURN", "FOREACH", "IN", "TRUE", "FALSE", "NULL", 
                      "STRING", "INTEGER", "FLOAT", "BOOLEAN", "ARRAY", 
                      "CONSTRUCTOR", "DESTRUCTOR", "NEW", "BY", "DEC_LITERAL", 
                      "HEX_LITERAL", "OCTAL_LITERAL", "BINARY_LITERAL", 
                      "FLOAT_LITERAL", "STRING_LITERAL", "BLOCK_COMMENT", 
                      "STATIC_ID_NAME", "ID_NAME", "DOT", "DOT2", "COMMA", 
                      "SEMICOLON", "COLON", "COLON2", "LP", "RP", "LSB", 
                      "RSB", "LCB", "RCB", "LOG_NEGATE", "LOG_AND", "LOG_OR", 
                      "LOG_EQ", "LOG_NEQ", "EQ", "PLUS", "MINUS", "ASTERISK", 
                      "F_SLASH", "PERCENT", "GT", "GEQ", "LT", "LEQ", "STR_CONCAT", 
                      "STR_EQ", "WS", "ERROR_TOKEN", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_class_decl = 1
    RULE_entry_class = 2
    RULE_class_mem_decl = 3
    RULE_attr_decl = 4
    RULE_attr_decl_wo_asg = 5
    RULE_attr_decl_w_asg = 6
    RULE_attr_decl_rep = 7
    RULE_attr_name_list = 8
    RULE_method_decl = 9
    RULE_method_local_decl = 10
    RULE_method_local_decl_wo_asg = 11
    RULE_method_local_decl_w_asg = 12
    RULE_method_local_decl_rep = 13
    RULE_entry_method = 14
    RULE_stmt_wo_return = 15
    RULE_cons_method = 16
    RULE_des_method = 17
    RULE_param_list = 18
    RULE_param = 19
    RULE_literal_list = 20
    RULE_literal = 21
    RULE_int_literal = 22
    RULE_boolean_literal = 23
    RULE_static_idname_list = 24
    RULE_idname_list = 25
    RULE_array_literal = 26
    RULE_any_type = 27
    RULE_expr_list = 28
    RULE_expr = 29
    RULE_expr1 = 30
    RULE_expr2 = 31
    RULE_expr3 = 32
    RULE_expr4 = 33
    RULE_expr5 = 34
    RULE_expr6 = 35
    RULE_expr7 = 36
    RULE_expr8 = 37
    RULE_expr9 = 38
    RULE_expr10 = 39
    RULE_operand = 40
    RULE_new_object_expr = 41
    RULE_assign_stmt = 42
    RULE_assign_lhs = 43
    RULE_assign_rhs = 44
    RULE_assign_lhs_sub_expr_list = 45
    RULE_assign_lhs_sub_expr = 46
    RULE_assign_lhs_sub_expr1 = 47
    RULE_assign_lhs_sub_expr2 = 48
    RULE_assign_lhs_sub_expr3 = 49
    RULE_flow_stmt = 50
    RULE_if_stmt = 51
    RULE_elseif_stmt = 52
    RULE_else_stmt = 53
    RULE_for_stmt = 54
    RULE_for_range = 55
    RULE_break_stmt = 56
    RULE_continue_stmt = 57
    RULE_return_stmt = 58
    RULE_stmt = 59
    RULE_block_stmt = 60

    ruleNames =  [ "program", "class_decl", "entry_class", "class_mem_decl", 
                   "attr_decl", "attr_decl_wo_asg", "attr_decl_w_asg", "attr_decl_rep", 
                   "attr_name_list", "method_decl", "method_local_decl", 
                   "method_local_decl_wo_asg", "method_local_decl_w_asg", 
                   "method_local_decl_rep", "entry_method", "stmt_wo_return", 
                   "cons_method", "des_method", "param_list", "param", "literal_list", 
                   "literal", "int_literal", "boolean_literal", "static_idname_list", 
                   "idname_list", "array_literal", "any_type", "expr_list", 
                   "expr", "expr1", "expr2", "expr3", "expr4", "expr5", 
                   "expr6", "expr7", "expr8", "expr9", "expr10", "operand", 
                   "new_object_expr", "assign_stmt", "assign_lhs", "assign_rhs", 
                   "assign_lhs_sub_expr_list", "assign_lhs_sub_expr", "assign_lhs_sub_expr1", 
                   "assign_lhs_sub_expr2", "assign_lhs_sub_expr3", "flow_stmt", 
                   "if_stmt", "elseif_stmt", "else_stmt", "for_stmt", "for_range", 
                   "break_stmt", "continue_stmt", "return_stmt", "stmt", 
                   "block_stmt" ]

    EOF = Token.EOF
    T__0=1
    MAIN=2
    CLASS=3
    SELF=4
    VAL=5
    VAR=6
    IF=7
    ELSEIF=8
    ELSE=9
    BREAK=10
    CONTINUE=11
    RETURN=12
    FOREACH=13
    IN=14
    TRUE=15
    FALSE=16
    NULL=17
    STRING=18
    INTEGER=19
    FLOAT=20
    BOOLEAN=21
    ARRAY=22
    CONSTRUCTOR=23
    DESTRUCTOR=24
    NEW=25
    BY=26
    DEC_LITERAL=27
    HEX_LITERAL=28
    OCTAL_LITERAL=29
    BINARY_LITERAL=30
    FLOAT_LITERAL=31
    STRING_LITERAL=32
    BLOCK_COMMENT=33
    STATIC_ID_NAME=34
    ID_NAME=35
    DOT=36
    DOT2=37
    COMMA=38
    SEMICOLON=39
    COLON=40
    COLON2=41
    LP=42
    RP=43
    LSB=44
    RSB=45
    LCB=46
    RCB=47
    LOG_NEGATE=48
    LOG_AND=49
    LOG_OR=50
    LOG_EQ=51
    LOG_NEQ=52
    EQ=53
    PLUS=54
    MINUS=55
    ASTERISK=56
    F_SLASH=57
    PERCENT=58
    GT=59
    GEQ=60
    LT=61
    LEQ=62
    STR_CONCAT=63
    STR_EQ=64
    WS=65
    ERROR_TOKEN=66
    UNCLOSE_STRING=67
    ILLEGAL_ESCAPE=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def class_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_declContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_declContext,i)


        def entry_class(self):
            return self.getTypedRuleContext(D96Parser.Entry_classContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 122
                    self.class_decl() 
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 128
                self.entry_class()


            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.CLASS:
                self.state = 131
                self.class_decl()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 137
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID_NAME(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID_NAME)
            else:
                return self.getToken(D96Parser.ID_NAME, i)

        def LCB(self):
            return self.getToken(D96Parser.LCB, 0)

        def RCB(self):
            return self.getToken(D96Parser.RCB, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def class_mem_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_mem_declContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_mem_declContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_class_decl




    def class_decl(self):

        localctx = D96Parser.Class_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(D96Parser.CLASS)
            self.state = 140
            self.match(D96Parser.ID_NAME)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 141
                self.match(D96Parser.COLON)
                self.state = 142
                self.match(D96Parser.ID_NAME)


            self.state = 145
            self.match(D96Parser.LCB)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAL) | (1 << D96Parser.VAR) | (1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.STATIC_ID_NAME) | (1 << D96Parser.ID_NAME))) != 0):
                self.state = 146
                self.class_mem_decl()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 152
            self.match(D96Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Entry_classContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def LCB(self):
            return self.getToken(D96Parser.LCB, 0)

        def RCB(self):
            return self.getToken(D96Parser.RCB, 0)

        def class_mem_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_mem_declContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_mem_declContext,i)


        def entry_method(self):
            return self.getTypedRuleContext(D96Parser.Entry_methodContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_entry_class




    def entry_class(self):

        localctx = D96Parser.Entry_classContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_entry_class)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(D96Parser.CLASS)
            self.state = 155
            self.match(D96Parser.T__0)
            self.state = 156
            self.match(D96Parser.LCB)
            self.state = 160
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 157
                    self.class_mem_decl() 
                self.state = 162
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.MAIN:
                self.state = 163
                self.entry_method()


            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAL) | (1 << D96Parser.VAR) | (1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.STATIC_ID_NAME) | (1 << D96Parser.ID_NAME))) != 0):
                self.state = 166
                self.class_mem_decl()
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 172
            self.match(D96Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_mem_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr_decl(self):
            return self.getTypedRuleContext(D96Parser.Attr_declContext,0)


        def method_decl(self):
            return self.getTypedRuleContext(D96Parser.Method_declContext,0)


        def cons_method(self):
            return self.getTypedRuleContext(D96Parser.Cons_methodContext,0)


        def des_method(self):
            return self.getTypedRuleContext(D96Parser.Des_methodContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_mem_decl




    def class_mem_decl(self):

        localctx = D96Parser.Class_mem_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_mem_decl)
        try:
            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.attr_decl()
                pass
            elif token in [D96Parser.STATIC_ID_NAME, D96Parser.ID_NAME]:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.method_decl()
                pass
            elif token in [D96Parser.CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 176
                self.cons_method()
                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 4)
                self.state = 177
                self.des_method()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(D96Parser.SEMICOLON, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def attr_decl_wo_asg(self):
            return self.getTypedRuleContext(D96Parser.Attr_decl_wo_asgContext,0)


        def attr_decl_w_asg(self):
            return self.getTypedRuleContext(D96Parser.Attr_decl_w_asgContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attr_decl




    def attr_decl(self):

        localctx = D96Parser.Attr_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attr_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 183
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 181
                self.attr_decl_wo_asg()
                pass

            elif la_ == 2:
                self.state = 182
                self.attr_decl_w_asg()
                pass


            self.state = 185
            self.match(D96Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_decl_wo_asgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr_name_list(self):
            return self.getTypedRuleContext(D96Parser.Attr_name_listContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def any_type(self):
            return self.getTypedRuleContext(D96Parser.Any_typeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attr_decl_wo_asg




    def attr_decl_wo_asg(self):

        localctx = D96Parser.Attr_decl_wo_asgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attr_decl_wo_asg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.attr_name_list()
            self.state = 188
            self.match(D96Parser.COLON)
            self.state = 189
            self.any_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_decl_w_asgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr_decl_rep(self):
            return self.getTypedRuleContext(D96Parser.Attr_decl_repContext,0)


        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def ID_NAME(self):
            return self.getToken(D96Parser.ID_NAME, 0)

        def STATIC_ID_NAME(self):
            return self.getToken(D96Parser.STATIC_ID_NAME, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_attr_decl_w_asg




    def attr_decl_w_asg(self):

        localctx = D96Parser.Attr_decl_w_asgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attr_decl_w_asg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            _la = self._input.LA(1)
            if not(_la==D96Parser.STATIC_ID_NAME or _la==D96Parser.ID_NAME):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 192
            self.attr_decl_rep()
            self.state = 193
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_decl_repContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def attr_decl_rep(self):
            return self.getTypedRuleContext(D96Parser.Attr_decl_repContext,0)


        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def ID_NAME(self):
            return self.getToken(D96Parser.ID_NAME, 0)

        def STATIC_ID_NAME(self):
            return self.getToken(D96Parser.STATIC_ID_NAME, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def any_type(self):
            return self.getTypedRuleContext(D96Parser.Any_typeContext,0)


        def EQ(self):
            return self.getToken(D96Parser.EQ, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_attr_decl_rep




    def attr_decl_rep(self):

        localctx = D96Parser.Attr_decl_repContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attr_decl_rep)
        self._la = 0 # Token type
        try:
            self.state = 205
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 195
                self.match(D96Parser.COMMA)
                self.state = 196
                _la = self._input.LA(1)
                if not(_la==D96Parser.STATIC_ID_NAME or _la==D96Parser.ID_NAME):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 197
                self.attr_decl_rep()
                self.state = 198
                self.expr()
                self.state = 199
                self.match(D96Parser.COMMA)
                pass
            elif token in [D96Parser.COLON]:
                self.enterOuterAlt(localctx, 2)
                self.state = 201
                self.match(D96Parser.COLON)
                self.state = 202
                self.any_type()
                self.state = 203
                self.match(D96Parser.EQ)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_name_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_NAME(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID_NAME)
            else:
                return self.getToken(D96Parser.ID_NAME, i)

        def STATIC_ID_NAME(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.STATIC_ID_NAME)
            else:
                return self.getToken(D96Parser.STATIC_ID_NAME, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_attr_name_list




    def attr_name_list(self):
